--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,13 @@
 body{
     font-family: 'Inter', sans-serif;
-    background-color: #c1ff6a82;
+    background-image: linear-gradient(#9FC532, #CFCBCB, #A8BC6A, #57934D);
 }
-
+body.contatos{
+        height: 100%;
+        margin: 0;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+}
 .inicio{
     background-image: url(../images/ponte.png);
     background-color: #000000;
