--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,6 +16,7 @@ body.contatos{
     /* background-repeat: repeat-y; */
     background-size: 100% 100%;
     height: 100vh;
+    overflow-x: hidden;
     color: #FFFFFF;
 }
 
@@ -44,15 +45,17 @@ div.cabecalho{
 }
 
 .texto-inicial{
-    position: fixed;
-    top: 35%;
+    position: relative;
+    top: 15vh;
     font-size: larger;
+    left: 10px;
 }
 
 .missao{
-    position: fixed;
-    top: 32%;
+    position: relative;
+    top: 10vh;
     font-size: 60px;
+    left: 10px;
 }
 
 .essa{
