--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Inter', sans-serif;
     background-image: linear-gradient(#9FC532, #CFCBCB, #A8BC6A, #57934D);
+    height: 100%;
 }
 body.contatos{
         height: 100%;
