remove viewport restriction

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -196,6 +196,7 @@ footer{
     background-repeat: repeat-x;
     background-size: auto;
     background-color: #004922;
+    height: 100%;
     color: #FFFFFF;
 }
 
