--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -241,6 +241,22 @@ footer{
     bottom: 150px; */
 }
 
+.termos{
+    display: inline-block;
+    font-size: 20px;
+    padding-left: 50px;
+    padding-right: 10px;
+}
+
+.creditos{
+    display: inline-block;
+    font-size: 20px;
+}
+
+.free-link{
+    color: #FFFFFF;
+}
+
 .link-tit{
     /* position: relative;
     left: 30%;
