--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -88,6 +88,7 @@ footer{
     height: 5%; */
     /* bottom: -10px;
     right: 10px; */
+    width: 2.4%;
 }
 .instagram{
     /* position: relative;
