--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,6 +26,7 @@ body.contatos{
 }
 .cont-index{
     height: 100%;
+    font-size: 100%;
     /* position: relative; */
 }
 
@@ -165,11 +166,13 @@ p.essa.texto-inicial{
 
 .membro{
     text-align: center;
+    background-color: white;
+    border-radius: 35px;
 }
 
 .pos1{
     display: block;
-    margin-left: auto;
+    margin-left: 40px;
     margin-right: 1200px;
     width: 30%;
 }
@@ -186,6 +189,21 @@ p.essa.texto-inicial{
     margin-left: auto;
     margin-right: 700px;
     width: 30%;
+}
+
+.voluntariar{
+    text-align: center;
+    font-weight: bold;
+    font-size: xx-large;
+}
+
+.voluntario-btn{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+    background-color: #FFFFFF;
+    border-radius: 20%;
 }
 
 .volta{
