--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', sans-serif !important;
     background-image: linear-gradient(#9FC532, #CFCBCB, #A8BC6A, #57934D);
 }
 body.contatos{
