--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -141,7 +141,19 @@ a.links.ultimo{
     margin-top: 15px;
     font-size: medium;
 }
-
+@media (min-width:71rem){
+    header{
+        width: 100%;
+        background-color: white;
+        padding-top: 20px;
+    }
+    nav{
+        margin-right: 20px;
+    }
+    nav a{
+        color: black;
+    }
+}
 @media (max-width: 70rem){
     .menu-layout,
     .fechar-menu {
