--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,7 +3,7 @@ body{
     background-image: linear-gradient(#9FC532, #CFCBCB, #A8BC6A, #57934D);
 }
 body.contatos{
-        height: 100%;
+        min-height: 100vh;
         margin: 0;
         background-repeat: no-repeat;
         background-attachment: fixed;
