--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -23,6 +23,15 @@ html{
     display: flex;
     flex-direction: column;
 }
+.secao-texto{
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    padding: 10px 10px 10px 10px;
+    margin-top: 1rem;
+    margin-right: 50%;
+    color: black;
+    
+}
 /*  */
 .parte-esq{
     /* height: 100%; */
@@ -31,6 +40,7 @@ html{
 .cont-index{
     height: 100%;
     font-size: 100%;
+
     /* position: relative; */
 }
 
@@ -146,7 +156,7 @@ a.links.ultimo{
 
 .texto-inicial{
     margin-bottom: -10px;
-    margin-top: 15px;
+    /* margin-top: 15px; */
     font-size: medium;
 }
 @media (min-width:70.1rem){
@@ -198,9 +208,6 @@ a.links.ultimo{
 }
 
 /* Main .parte-esq alignment to match Figma's layout */
-p.essa.texto-inicial{
-    margin-top: 50px;
-}
 .missao{
     font-size: 40px;
 }
@@ -210,7 +217,7 @@ p.essa.texto-inicial{
 }
 
 .cont-index{
-    width: 50%;
+    /* width: 50%; */
     text-align: left;
     font-size-adjust: 10px;
 }
