--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Inter', sans-serif !important;
-    background-image: linear-gradient(#9FC532, #CFCBCB, #A8BC6A, #57934D);
+    background-image: #F5F5F5;
 }
 body.contatos{
         min-height: 100vh;
