--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -577,7 +577,7 @@ a.links.ultimo{
 
 .carrossel-container {
     width: 100%;
-    height: 600px;
+    height: 800px;
     overflow: hidden;
     position: relative;
   }
@@ -595,28 +595,33 @@ a.links.ultimo{
 }
 
 .carrossel-item .horizontal{
-    width: 40%;
-    height: 200px;
+    width: 45%;
+    height: 40%;
     object-fit: contain;
-    position: absolute;
-    left: 700px;
-    top: 300px;
-    z-index: 1;
+    /* position: relative;
+    left: 30%;
+    top: 10%;
+    z-index: 1; */
 }
 .carrossel-item .vertical{
-    height: 550px;
+    height: 60%;
+    width: 50%;
     object-fit: contain;
-    position: absolute;
-    left: 500px;
-    bottom: 20px;
+    /* position: relative;
+    left: 20%;
+    top: 10%; */
   }
-  .carrossel-item .verticalarvore{
-    height: 550px;
-    object-fit: contain;
-    position: absolute;
-    left: 180px;
-    bottom: 20px;
-  }
+.carrossel-item .vertical-especiais{
+    height: 40%;
+    width: 30%;
+    object-fit: scale-down;
+}
+
+.carrossel-item .horizontal-especiais{
+    width: 50%;
+    object-fit: scale-down;
+}
+
 #equipe{
     display: flex;
     flex-direction: column;
