--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -294,18 +294,12 @@ a.links.ultimo{
     color: #FFFFFF;
 }
 
-.agendamento{
-    display: flex;
-    margin: 0 auto;
-    flex-wrap: wrap;
-    width: 15%;
-}
-
 #agendar{
     background-image: url(../images/box.png);
     background-size: cover;
     color: white;
     padding-bottom: 100px;
+    text-align: center;
 }
 
 .agendar2{
