Better footer social medias

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -626,6 +626,10 @@ a.links.ultimo{
     cursor:default;
 }
 
+.redes2{
+    margin-right: 15%;
+}
+
 /* Don't modify or input
 any code below this line unless
 you're modifying media screen specifically*/
